fixes issue that caused two posts to be saved to the db. also formats the posts to look legible.

--- a/public/styles/sass/index.scss
+++ b/public/styles/sass/index.scss
@@ -29,6 +29,10 @@ body {
   p {
     color: $white;
   }
+
+  li {
+    list-style: none;
+  }
 }
 
 
@@ -124,11 +128,14 @@ body {
 
 /* new_post.dust */
 #new-post {
+  color: #000000;
   input {
+    color: #000000;
     width: 400px;
     margin: 10px 0px;
   }
   #body {
+    color: #000000;
     width: 400px;
     height: 200px;
   }
